Opened 16 years ago

Closed 16 years ago

Last modified 5 years ago

#2995 closed bug (fixed)

Screen preflet: should reselect depth in drop-down menu

Reported by: Adek336 Owned by: axeld
Priority: normal Milestone: R1
Component: Preferences/Screen Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking: #2188
Platform: All

Description

At my place it goes like
Open screen preflet
The depth in the drop-down menu is selected 32bit, resolution 1024x767
Choose resolution 1400x1050, the last on the list
With this resolution, my hardware can't handle 32bit depth, but 32bit is still selected, when I open the color drop down menu, I see that 32bit is grayed out, but it's selected even when I open the menu
I choose apply
A message tells me that "The screen mode could not be set: Unknown mode"

Expected behaviour: upon choosing 1400x1050, the preflet should change the selection in the color drop-down menu to the next active position, that is 16bit.

Attachments (2)

img_1165.jpg (163.6 KB ) - added by Adek336 16 years ago.
img_1166.jpg (156.7 KB ) - added by Adek336 16 years ago.

Download all attachments as: .zip

Change History (8)

comment:2 by axeld, 16 years ago

What graphics card do you have, and what driver is being used?

comment:3 by Adek336, 16 years ago

~> listdev
...
device Display controller (VGA compatible controller, VGA controller) [3|0|0]
  vendor 10de: nVidia Corporation
  device 01d7: G72M [Quadro NVS 110M/GeForce Go 7300]
...
~> ls /dev/graphics/  
vesa

comment:4 by Adek336, 16 years ago

KERN: VESA version = 3.0
KERN: OEM string: NVIDIA
KERN:   100: 640 x 400 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   101: 640 x 480 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   102: 800 x 600 x 4 (a = 799, mem = 3, phy = 0, p = 4, b = 1)
KERN:   103: 800 x 600 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   104: 1024 x 768 x 4 (a = 799, mem = 3, phy = 0, p = 4, b = 1)
KERN:   105: 1024 x 768 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   106: 1280 x 1024 x 4 (a = 799, mem = 3, phy = 0, p = 4, b = 1)
KERN:   107: 1280 x 1024 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   10e: 320 x 200 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   10f: 320 x 200 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   111: 640 x 480 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   112: 640 x 480 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   114: 800 x 600 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   115: 800 x 600 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   117: 1024 x 768 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   118: 1024 x 768 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   11a: 1280 x 1024 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   11b: 1280 x 1024 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   130: 320 x 200 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   131: 320 x 400 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   132: 320 x 400 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   133: 320 x 400 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   134: 320 x 240 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   135: 320 x 240 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   136: 320 x 240 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   13d: 640 x 400 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   13e: 640 x 400 x 32 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN:   147: 1400 x 1050 x 8 (a = 927, mem = 4, phy = d0000000, p = 1, b = 1)
KERN:   148: 1400 x 1050 x 16 (a = 927, mem = 6, phy = d0000000, p = 1, b = 1)
KERN: VESA compatible graphics!
KERN: EDID1: 4f
KERN: EDID2: ebx 0

by Adek336, 16 years ago

Attachment: img_1165.jpg added

by Adek336, 16 years ago

Attachment: img_1166.jpg added

comment:5 by axeld, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev32179.

comment:6 by pulkomandy, 5 years ago

Blocking: 2188 added
Note: See TracTickets for help on using tickets.