* If the user selected color space is not available for the selected resolution,   _CheckColorMenu() now selects the closest item available - if you switch back   the resolution to one that supports the original color space, it will be   restored. This fixes bug #2995. * I also reverted r24674 as I remembered why I did that in the first place   (advertizing 24 bit modes as 32 bit), and it was a pretty stupid idea to   solve it like this, I must admit. * Instead, the color space menu now only shows spaces that are actually   supported by the card at all. One could think about hiding 24 bit in case   both 24 bit, and 32 bit are available, but I didn't do that yet.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32179 a95241bf-73f2-0310-859d-f6bbb57e9c96